# addonfactory-cloudconnect-library

./: .fortifyrc  .fossa.yml  .gitignore  .gitmodules  .licenserc.yaml  .pre-commit-config.yaml  .releaserc  .semgrepignore  Gruntfile.js  NOTICE  README.md  build.json  install_packages.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  update_version.sh
.github/: dependabot.yml
.github/workflows/: agreements.yaml  build-test-release.yml  build.yaml  codescan.yml  exclude-patterns.txt  sr-prepare.sh
cloudconnectlib/: __init__.py  client.py
cloudconnectlib/common/: lib_util.py  log.py  util.py
cloudconnectlib/configuration/: loader.py
cloudconnectlib/core/: checkpoint.py  engine.py  engine_v2.py  exceptions.py  ext.py  http.py  job.py  models.py  pipemgr.py  plugin.py  task.py  template.py
cloudconnectlib/core/cacerts/: ca_certs_locater.py
cloudconnectlib/splunktacollectorlib/: cloud_connect_mod_input.py  config.py  splunk_ta_import_declare.py  ta_cloud_connect_client.py
cloudconnectlib/splunktacollectorlib/common/: __init__.py  log.py  rwlock.py
cloudconnectlib/splunktacollectorlib/data_collection/: ta_checkpoint_manager.py  ta_config.py  ta_data_client.py  ta_data_collector.py  ta_data_loader.py  ta_helper.py  ta_mod_input.py
deprecated_files/: ca_certs_locater.py
example/json_interface/: okta_after_hcm.json  okta_link_hcm.json  snow_fuji_hcm.json  snow_helsinki_hcm.json
examples/1.0/: snow_fuji_hcm.json  snow_helsinki_hcm.json
examples/1.0/snow_helsinki/: snow_inputs.py
examples/2.0/: okta_after_hcm.json  okta_link_hcm.json
package/cloudconnectlib/: __init__.py  client.py
package/cloudconnectlib/common/: lib_util.py  log.py  splunk_util.py  util.py
package/cloudconnectlib/configuration/: __init__.py  hcm_schema.json  loader.py  loaders.py  schema_1_0_0.json
package/cloudconnectlib/core/: __init__.py  client.py  cloud_connect_client.py  config.py  defaults.py  engine.py  engine_v2.py  exception.py  exceptions.py  ext.py  http.py  job.py  loaders.py  models.py  plugin.py  task.py  template.py  util.py
package/cloudconnectlib/core/cacerts/: ca_certs_locater.py
package/cloudconnectlib/core/model/: __init__.py  config.py  global_settings.py  meta.py  request.py
package/cloudconnectlib/splunktacollectorlib/: cloud_connect_mod_input.py  mod_helper.py  ta_cloud_connect_client.py
package/cloudconnectlib/splunktacollectorlib/common/: log.py
package/cloudconnectlib/splunktacollectorlib/data_collection/: ta_checkpoint_manager.py  ta_config.py  ta_consts.py  ta_data_client.py  ta_data_collector.py  ta_data_loader.py  ta_helper.py  ta_mod_input.py
package/cloudconnectlib/splunktalib/: modinput.py  rest.py  splunk_cluster.py  splunk_platform.py  state_store.py  timer.py
package/cloudconnectlib/splunktalib/common/: log.py  util.py
package/cloudconnectlib/splunktalib/concurrent/: thread_pool.py
package/cloudconnectlib/splunktalib/conf_manager/: conf_endpoints.py  (+1 more)
package/cloudconnectlib/splunktaucclib/: config.py
package/default/: app.conf
package/lib-cloud-connect/configuration/: schema.json
package/lib-cloud-connect/splunktalib/: credentials.py  state_store.py
test/: httprequest.py
test/data/: test_1.json  test_2.json  test_4.json
test/functional/: client_runner.py  client_test.py  proxy.json  test_appdynamics.py  test_cc_basic.py  test_job.py  use_latest_build.py
test/functional/download_package/: install_cc_ucc.py  requirements-qa.txt
test/functional/sample_ta/: README.md  README.txt  build_sample_ta.py  ckpt_mock_server.py
test/tool/: hcm_json_schema_builder.py  schema.py
test/unit/: __init__.py  common.py  test_checkpoint.py  test_client.py  test_cloud_connect_schema.py  test_engine_v2.py  test_ext.py  test_hcm_schema.py  test_http.py  test_http_task.py  test_lib_util.py  test_loader.py  test_models.py  test_plugin.py  test_schema.py  test_split_task.py  test_state_store.py  test_template.py  test_util.py
test/unit/data/: data.json  hcm_1.json  test_1.json
tool/schema/: cloud_connect_schema_builder.py  cloud_connect_schema_builder_1_0_0.py  hcm_json_schema_builder.py
(+157 files in other folders)
