[tool.poetry]
name = "cloudconnectlib"
version = "0.0.0"
description = "APP Cloud Connect"
authors = ["Addon Factory template <addonfactory@splunk.com>"]
license = "APACHE-2.0"
classifiers = [
        "Intended Audience :: Developers",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.7",
        "Operating System :: OS Independent",
        "License :: OSI Approved :: Apache Software License",
]
include = [
    "cloudconnectlib/configuration/*.json",
]

[tool.poetry.dependencies]
python = "^3.7"
jsonschema = "^3.2.0"
jinja2 = "2.10.1"
jsonpath-rw = "1.4.0"
httplib2 = "0.19.1"
splunk-sdk = "1.6.15"
sortedcontainers = "2.3.0"
munch = "2.3.2"
splunktaucclib = "4.1.2"
solnlib = "3.0.5"
six = "*"
future = "*"
configparser = "^5.0.2"
requests = "^2.25.1"
splunktalib = "^1.2.1"
jsl = "^0.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "2.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
