#
# Copyright 2021 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[tool.poetry]
name = "cloudconnectlib"
version = "0.0.0"
description = "APP Cloud Connect"
authors = ["Addon Factory template <addonfactory@splunk.com>"]
license = "APACHE-2.0"
classifiers = [
        "Intended Audience :: Developers",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.7",
        "Operating System :: OS Independent",
        "License :: OSI Approved :: Apache Software License",
]
include = [
    "cloudconnectlib/configuration/*.json",
]

[tool.poetry.dependencies]
python = "^3.7"
jsonschema = "^3.2.0"
jinja2 = ">=2.10.1,<4.0.0"
httplib2 = "^0.19"
splunk-sdk = "^1.6"
munch = "^2.3.2"
splunktaucclib = "^5"
six = "*"
requests = "^2.24"
jsonpath-ng = "^1.5.2"
decorator = ">=4,<6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
